:sparkles: simplify and test infinite scroll friendly endpoint
